# plugins

./: CMakeLists.txt  CMakePresets.json  README.md
AVTVimba/: CMakeLists.txt  avtVimba.cpp  avtVimba.h  avtVimba_names.h  pluginVersion.h.in
BasicFilters/: CMakeLists.txt
BasicGPLFilters/: CMakeLists.txt
BristolInstruments/: BristolInstruments.cpp  BristolInstruments.h  CMakeLists.txt  bristolscpi.cpp  bristolscpi.h  dialogBristolInstruments.cpp  dialogBristolInstruments.h  dialogBristolInstruments.ui  dockWidgetBristolInstruments.cpp  dockWidgetBristolInstruments.h  dockWidgetBristolInstruments.ui  pluginVersion.h
BristolInstruments/docs/: BristolInstruments.rst
BristolInstruments/translation/: BristolInstruments_de.ts
DataObjectIO/: DataObjectIO.cpp
DummyGrabber/: DummyGrabber.cpp
FittingFilters/: CMakeLists.txt
PGRFlyCapture/: CMakeLists.txt  PGRFlyCapture.cpp
ThorlabsPowerMeter/: CMakeLists.txt  pluginVersion.h.in  thorlabsPowerMeter.cpp
Ximea/: CMakeLists.txt
